# agentClassroom

./: .gitignore  .tool-versions  README.md  main.py  prompt_writer.py  pyproject.toml  reporter_agent.py  writer_agent.py
agents/: main.py  prompt_writer.py
backend/: README.md  agent.py  agent_classroom_repo.py  client.py  client_stream.py  controller.py  graph.py  main.py  pyproject.toml  rag-sample.py  retrievers.py  server.py  templates.py  utils.py
backend/agents/: __init__.py  critic_agent.py  main.py  prompt_writer.py  reporter_agent.py  ta_agent.py
backend/utils/: pdf_loader.py
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json
frontend/components/: CriticPoints.tsx  DiscussionContainer.tsx  ReportPoints.tsx
frontend/pages/: _document.tsx  index.tsx
frontend/types/: report.ts
my-ai-classroom/: .env.local  Dockerfile  package-lock.json  package.json
my-ai-classroom/components/: AgentPopup.tsx  CriticPoints.tsx  DiscussionContainer.tsx  ReportForm.tsx  ReportSummary.tsx  TAMessages.tsx
my-ai-classroom/hooks/: useAgentFlow.ts
my-ai-classroom/pages/: _app.tsx  _document.tsx  index.tsx
my-ai-classroom/utils/: api.ts
