[project]
name = "agents"
version = "0.1.0"
description = ""
authors = [
    {name = "tetty2525",email = "121234719+tetty2525@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "google-cloud-aiplatform (>=1.76.0,<2.0.0)",
    "langchain (>=0.3.14,<0.4.0)",
    "openai (>=1.59.6,<2.0.0)",
    "langchain-community (>=0.3.14,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
