[project]
name = "agents"
version = "0.1.0"
description = ""
authors = [
    {name = "tetty2525",email = "121234719+tetty2525@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "google-cloud-aiplatform (>=1.76.0,<2.0.0)",
    "langchain (>=0.3.14,<0.4.0)",
    "openai (>=1.59.6,<2.0.0)",
    "langchain-community (>=0.3.14,<0.4.0)",
    "langchain-openai (>=0.3.1,<0.4.0)",
    "langchain-unstructured (>=0.1.6,<0.2.0)",
    "langchain-text-splitters (>=0.3.5,<0.4.0)",
    "unstructured[pdf] (>=0.16.14,<0.17.0)",
    "langchain-chroma (>=0.2.0,<0.3.0)",
    "tavily-python (>=0.5.0,<0.6.0)"
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
    "PD011", # pandas use of dot values
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

logger-objects = ["src.library.logger.LOGGER"]

[tool.ruff.lint.pylint]
max-args = 6

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
unstructured = {extras = ["pdf"], version = "^0.16.14"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
